# umich-transit-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: com.umich-transit.poller.plist  entrypoint.sh  umich-transit-poller.service
docs/: DEPLOY.md
docs/superpowers/plans/: 2026-05-26-umich-transit-mcp.md
docs/superpowers/specs/: 2026-05-26-umich-transit-mcp-design.md
scripts/: check_api.py  seed_static_data.py
src/umich_transit/: __init__.py  config.py
src/umich_transit/core/: planner.py  reliability.py  service.py
src/umich_transit/core/clients/: base.py  mbus.py
src/umich_transit/core/storage/: db.py  models.py  queries.py  seed.py
src/umich_transit/core/storage/migrations/: env.py
src/umich_transit/mcp_server/: __main__.py  server.py  tools.py
src/umich_transit/poller/: __main__.py  arrival_detector.py  prediction_logger.py  runner.py  stats_job.py
tests/: conftest.py
tests/core/: test_planner.py  test_reliability.py  test_service.py
tests/core/clients/: test_mbus.py
tests/core/storage/: test_db.py  test_models.py  test_queries.py  test_seed.py
tests/fixtures/mbus/: error_no_arrivals.json  error_no_key.json  getpatterns_BB.json  getpredictions.json  getroutes.json  getvehicles.json  getvehicles_mixed.json
tests/mcp_server/: test_tools.py
tests/poller/: test_arrival_detector.py  test_prediction_logger.py  test_runner.py  test_stats_job.py
(+2 files in other folders)
